rpmzig/rpmdb.h

typedef struct tdnf_rpm_file tdnf_rpm_file;
typedef struct tdnf_rpm_config tdnf_rpm_config;
const char *tdnf_rpmdb_last_error(void);
int tdnf_rpm_config_open_root_fd(const tdnf_rpm_config *config);
typedef struct tdnf_rpmdb_iter tdnf_rpmdb_iter;
tdnf_rpmdb_iter *tdnf_rpmdb_iter_open(const char *root);
tdnf_rpmdb_iter *tdnf_rpmdb_iter_open_config(
    const tdnf_rpm_config *config
);
void tdnf_rpmdb_iter_close(tdnf_rpmdb_iter *it);
int tdnf_rpmdb_iter_next_header_blob_hnum(
    tdnf_rpmdb_iter *it,
    uint32_t *hnum_out,
    const unsigned char **blob_out,
    size_t *blob_len_out
);
int tdnf_rpmdb_write_install_file_config(
    const tdnf_rpm_config *config,
    tdnf_rpm_file *fh,
    uint32_t install_tid,
    uint32_t install_time,
    uint32_t install_color,
    const unsigned char *file_states,
    size_t file_state_count,
    uint32_t *hnum_out
);
int tdnf_rpmdb_write_replace_file_config(
    const tdnf_rpm_config *config,
    uint32_t old_hnum,
    tdnf_rpm_file *fh,
    uint32_t install_tid,
    uint32_t install_time,
    uint32_t install_color,
    const unsigned char *file_states,
    size_t file_state_count,
    uint32_t *new_hnum_out
);
int tdnf_rpmdb_write_erase_hnum_config(
    const tdnf_rpm_config *config,
    uint32_t hnum
);
typedef struct tdnf_rpmdb_label_match {
    uint32_t hnum;
    char *name;
    char *evr;
    char *arch;
} tdnf_rpmdb_label_match;
int tdnf_rpmdb_find_label_matches_config(
    const tdnf_rpm_config *config,
    const char *name,
    const char *evr,
    tdnf_rpmdb_label_match **matches_out,
    size_t *count_out
);
void tdnf_rpmdb_label_matches_free(
    tdnf_rpmdb_label_match *matches,
    size_t count
);
tdnf_rpm_file *tdnf_rpm_file_open(const char *path);
void tdnf_rpm_file_close(tdnf_rpm_file *fh);
typedef struct tdnf_rpm_file_metadata {
    const char *name;
    const char *version;
    const char *release;
    const char *arch;
    uint32_t epoch;
    int has_epoch;
    int package_kind;
    const unsigned char *main_header_blob;
    size_t main_header_blob_len;
} tdnf_rpm_file_metadata;
typedef struct tdnf_rpm_header_view {
    const unsigned char *blob;
    size_t len;
} tdnf_rpm_header_view;
int tdnf_rpm_header_name_equals(
    const unsigned char *header_blob,
    size_t header_len,
    const char *name
);
int tdnf_rpm_canonical_path_config(
    const tdnf_rpm_config *config,
    const char *path,
    char *output,
    size_t output_len
);
int tdnf_rpm_header_owns_path_config(
    const unsigned char *header_blob,
    size_t header_len,
    const char *path,
    const tdnf_rpm_config *config
);
int tdnf_rpm_file_get_metadata(
    tdnf_rpm_file *fh,
    tdnf_rpm_file_metadata *metadata_out
);
int tdnf_rpm_file_main_header_blob(
    tdnf_rpm_file *fh,
    const unsigned char **out,
    size_t *out_len
);
int tdnf_rpm_file_bytes(
    tdnf_rpm_file *fh,
    const unsigned char **out,
    size_t *out_len
);
int tdnf_rpm_file_digest(
    tdnf_rpm_file *fh,
    int kind,
    unsigned char *out_digest,
    size_t out_len
);
int tdnf_rpm_file_extract_source_config(
    tdnf_rpm_file *fh,
    const tdnf_rpm_config *config,
    uint32_t trans_flags
);
typedef enum tdnf_rpm_install_kind {
    TDNF_RPM_INSTALL_KIND_INSTALL = 0,
    TDNF_RPM_INSTALL_KIND_UPGRADE = 1,
    TDNF_RPM_INSTALL_KIND_REINSTALL = 2,
} tdnf_rpm_install_kind;
typedef struct tdnf_rpm_install_prior_header {
    const unsigned char *blob;
    size_t len;
} tdnf_rpm_install_prior_header;
typedef int (*tdnf_rpm_install_conflict_fn)(void *data, const char *path);
typedef int (*tdnf_rpm_changed_path_fn)(void *data, const char *path);
typedef struct tdnf_rpm_install_options {
    const char *install_root;
    const tdnf_rpm_config *config;
    uint32_t trans_flags;
    tdnf_rpm_install_kind install_kind;
    const tdnf_rpm_install_prior_header *prior_headers;
    size_t prior_header_count;
    tdnf_rpm_install_conflict_fn conflict_fn;
    void *conflict_fn_data;
    tdnf_rpm_changed_path_fn changed_path_fn;
    void *changed_path_fn_data;
} tdnf_rpm_install_options;
int tdnf_rpm_file_install(
    tdnf_rpm_file *fh,
    const tdnf_rpm_install_options *options
);
typedef enum tdnf_rpm_scriptlet_phase {
    TDNF_RPM_SCRIPTLET_PHASE_PRE = 0,
    TDNF_RPM_SCRIPTLET_PHASE_POST = 1,
    TDNF_RPM_SCRIPTLET_PHASE_PREUN = 2,
    TDNF_RPM_SCRIPTLET_PHASE_POSTUN = 3,
    TDNF_RPM_SCRIPTLET_PHASE_PRETRANS = 4,
    TDNF_RPM_SCRIPTLET_PHASE_POSTTRANS = 5,
} tdnf_rpm_scriptlet_phase;
typedef enum tdnf_rpm_scriptlet_outcome {
    TDNF_RPM_SCRIPTLET_OUTCOME_NOT_RUN = 0,
    TDNF_RPM_SCRIPTLET_OUTCOME_OK = 1,
    TDNF_RPM_SCRIPTLET_OUTCOME_EXITED = 2,
    TDNF_RPM_SCRIPTLET_OUTCOME_SIGNALED = 3,
} tdnf_rpm_scriptlet_outcome;
typedef struct tdnf_rpm_scriptlet_options {
    const char *install_root;
    const tdnf_rpm_config *config;
    int install_root_fd;
    uint32_t trans_flags;
    const char *const *rpmdefines;
    size_t rpmdefine_count;
    int arg1;
    int arg2;
    int script_fd;
    int redirect_stdout_to_stderr;
} tdnf_rpm_scriptlet_options;
typedef struct tdnf_rpm_scriptlet_result {
    int ran;
    int critical;
    tdnf_rpm_scriptlet_outcome outcome;
    int exit_status;
    int signal_number;
} tdnf_rpm_scriptlet_result;
int tdnf_rpm_header_run_scriptlet(
    const unsigned char *header_blob,
    size_t header_len,
    tdnf_rpm_scriptlet_phase phase,
    const tdnf_rpm_scriptlet_options *options,
    tdnf_rpm_scriptlet_result *result_out
);
typedef enum tdnf_rpm_trigger_phase {
    TDNF_RPM_TRIGGER_PHASE_TRIGGERIN = 0,
    TDNF_RPM_TRIGGER_PHASE_TRIGGERUN = 1,
    TDNF_RPM_TRIGGER_PHASE_TRIGGERPOSTUN = 2,
} tdnf_rpm_trigger_phase;
typedef struct tdnf_rpm_trigger_options {
    const char *db_root;
    const char *install_root;
    const tdnf_rpm_config *config;
    int install_root_fd;
    uint32_t trans_flags;
    const char *const *rpmdefines;
    size_t rpmdefine_count;
    int script_fd;
    int redirect_stdout_to_stderr;
    int arg2_override_present;
    int arg2_override_value;
    const tdnf_rpm_header_view *transaction_headers;
    size_t transaction_header_count;
    int transaction_view_present;
    const tdnf_rpm_header_view *trigger_owner_headers;
    size_t trigger_owner_header_count;
    int trigger_owner_view_present;
} tdnf_rpm_trigger_options;
typedef struct tdnf_rpm_trigger_result {
    int ran;
    int critical;
    tdnf_rpm_scriptlet_outcome outcome;
    int exit_status;
    int signal_number;
} tdnf_rpm_trigger_result;
int tdnf_rpm_header_run_triggers(
    const unsigned char *header_blob,
    size_t header_len,
    tdnf_rpm_trigger_phase phase,
    const tdnf_rpm_trigger_options *options,
    tdnf_rpm_trigger_result *result_out
);
typedef enum tdnf_rpm_file_trigger_kind {
    TDNF_RPM_FILE_TRIGGER_KIND_PACKAGE = 0,
    TDNF_RPM_FILE_TRIGGER_KIND_TRANSACTION = 1,
} tdnf_rpm_file_trigger_kind;
typedef enum tdnf_rpm_trigger_priority_class {
    TDNF_RPM_TRIGGER_PRIORITY_ALL = 0,
    TDNF_RPM_TRIGGER_PRIORITY_HIGH = 1,
    TDNF_RPM_TRIGGER_PRIORITY_LOW = 2,
} tdnf_rpm_trigger_priority_class;
typedef struct tdnf_rpm_trigger_path {
    const char *path;
    const unsigned char *source_header_blob;
    size_t source_header_len;
} tdnf_rpm_trigger_path;
typedef struct tdnf_rpm_file_trigger_owner {
    const unsigned char *header_blob;
    size_t header_len;
    const tdnf_rpm_trigger_path *paths;
    size_t path_count;
    uint64_t order;
} tdnf_rpm_file_trigger_owner;
typedef struct tdnf_rpm_file_trigger_options {
    const char *install_root;
    const tdnf_rpm_config *config;
    int install_root_fd;
    uint32_t trans_flags;
    const char *const *rpmdefines;
    size_t rpmdefine_count;
    int script_fd;
    int redirect_stdout_to_stderr;
    int suppress_stdin;
} tdnf_rpm_file_trigger_options;
int tdnf_rpm_header_validate_trigger_scripts_config(
    const unsigned char *header_blob,
    size_t header_len,
    const tdnf_rpm_config *config
);
int tdnf_rpm_header_has_file_trigger_metadata(
    const unsigned char *header_blob,
    size_t header_len,
    tdnf_rpm_file_trigger_kind kind
);
int tdnf_rpm_header_foreach_trigger_file(
    const unsigned char *header_blob,
    size_t header_len,
    uint32_t trans_flags,
    tdnf_rpm_changed_path_fn callback,
    void *callback_data
);