include/tdnfrepomd.h

typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_ITEM
{
    uint32_t dwOperation;
    const char *pszPath;
    const char *pszName;
    const char *pszEVR;
    const char *pszArch;
} TDNF_REPOMD_NATIVE_TRANSACTION_ITEM, *PTDNF_REPOMD_NATIVE_TRANSACTION_ITEM;
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2
{
    uint32_t dwOperation;
    const char *pszPath;
    const char *pszName;
    const char *pszEVR;
    const char *pszArch;
    uint32_t dwRpmDbHnum;
} TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2,
 *PTDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2;
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM
{
    TDNF_REPOMD_NATIVE_PROBLEM_TYPE nType;
    uint32_t dwInputIndex;
    const char *pszPackage;
    const char *pszRelatedPackage;
    const char *pszSubject;
    uint32_t dwCount;
} TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM;
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM
{
    uint32_t dwPriorOffset;
    uint32_t dwPriorCount;
} TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM;
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PLAN
{
    uint32_t dwItemCount;
    uint32_t *pdwOrderIndices;
    TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM *pItems;
    uint32_t dwPriorHnumCount;
    uint32_t *pdwPriorHnums;
    uint32_t dwProblemCount;
    TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM *pProblems;
} TDNF_REPOMD_NATIVE_TRANSACTION_PLAN;
typedef struct _TDNF_REPOMD_NATIVE_SOLVER_LIVE_REPOSITORY_V16
{
    const char *pszId;
    const char *pszCacheDir;
    const char *pszSnapshotFile;
    const char *pszDirectory;
    int32_t nPriority;
    uint32_t dwCost;
} TDNF_REPOMD_NATIVE_SOLVER_LIVE_REPOSITORY_V16,
 *PTDNF_REPOMD_NATIVE_SOLVER_LIVE_REPOSITORY_V16;
typedef struct _TDNF_REPOMD_NATIVE_SOLVER_LIVE_JOB
{
    const char *pszRepository;
    const char *pszName;
    const char *pszVersion;
    const char *pszRelease;
    const char *pszArch;
    const char *pszChecksumType;
    const char *pszChecksumValue;
    uint32_t dwEpoch;
    int nChecksumIsPkgId;
    uint32_t dwQueuePair;
    int nHasQueuePair;
} TDNF_REPOMD_NATIVE_SOLVER_LIVE_JOB,
 *PTDNF_REPOMD_NATIVE_SOLVER_LIVE_JOB;
const char*
TDNFRepoMdNativeTransactionLastError(
    void
    );
uint32_t
TDNFRepoMdNativeTransactionSolve(
    const TDNF_REPOMD_NATIVE_TRANSACTION_ITEM *pItems,
    uint32_t dwItemCount,
    const char *pszInstallRoot,
    char ***pppszOrderLines,
    uint32_t *pdwOrderCount,
    char ***pppszProblemLines,
    uint32_t *pdwProblemCount
    );
uint32_t
TDNFRepoMdNativeTransactionPlanSolveV2(
    const TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2 *pItems,
    uint32_t dwItemCount,
    const char *pszInstallRoot,
    TDNF_REPOMD_NATIVE_TRANSACTION_PLAN **ppPlan
    );
void
TDNFRepoMdNativeTransactionPlanFree(
    TDNF_REPOMD_NATIVE_TRANSACTION_PLAN *pPlan
    );