abi/internal.zig

pub const TDNF_REPOMD_NATIVE_SOLVER_LIVE_REPOSITORY_V16 = struct__TDNF_REPOMD_NATIVE_SOLVER_LIVE_REPOSITORY_V16;
pub const struct__TDNF_REPOMD_NATIVE_SOLVER_LIVE_JOB = extern struct {
    pszRepository: [*c]const u8 = null,
    pszName: [*c]const u8 = null,
    pszVersion: [*c]const u8 = null,
    pszRelease: [*c]const u8 = null,
    pszArch: [*c]const u8 = null,
    pszChecksumType: [*c]const u8 = null,
    pszChecksumValue: [*c]const u8 = null,
    dwEpoch: u32 = 0,
    nChecksumIsPkgId: c_int = 0,
    dwQueuePair: u32 = 0,
    nHasQueuePair: c_int = 0,
};
pub const TDNF_REPOMD_NATIVE_SOLVER_LIVE_JOB = struct__TDNF_REPOMD_NATIVE_SOLVER_LIVE_JOB;
pub extern fn TDNFRepoMdNativeTransactionLastError() [*c]const u8;
pub extern fn TDNFRepoMdNativeTransactionSolve(pItems: [*c]const TDNF_REPOMD_NATIVE_TRANSACTION_ITEM, dwItemCount: u32, pszInstallRoot: [*c]const u8, pppszOrderLines: [*c][*c][*c]u8, pdwOrderCount: [*c]u32, pppszProblemLines: [*c][*c][*c]u8, pdwProblemCount: [*c]u32) u32;
pub extern fn TDNFRepoMdNativeTransactionPlanSolveV2(pItems: [*c]const TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2, dwItemCount: u32, pszInstallRoot: [*c]const u8, ppPlan: [*c][*c]TDNF_REPOMD_NATIVE_TRANSACTION_PLAN) u32;
pub extern fn TDNFRepoMdNativeTransactionPlanFree(pPlan: [*c]TDNF_REPOMD_NATIVE_TRANSACTION_PLAN) void;
pub const struct_tdnf_rpm_file = opaque {};
pub const tdnf_rpm_file = struct_tdnf_rpm_file;
pub extern fn tdnf_rpmdb_last_error() [*c]const u8;
pub extern fn tdnf_rpm_config_open_root_fd(config: ?*const tdnf_rpm_config) c_int;
pub const struct_tdnf_rpmdb_iter = opaque {};
pub const tdnf_rpmdb_iter = struct_tdnf_rpmdb_iter;
pub extern fn tdnf_rpmdb_iter_open(root: [*c]const u8) ?*tdnf_rpmdb_iter;
pub extern fn tdnf_rpmdb_iter_open_config(config: ?*const tdnf_rpm_config) ?*tdnf_rpmdb_iter;
pub extern fn tdnf_rpmdb_iter_close(it: ?*tdnf_rpmdb_iter) void;
pub extern fn tdnf_rpmdb_iter_next_header_blob_hnum(it: ?*tdnf_rpmdb_iter, hnum_out: [*c]u32, blob_out: [*c][*c]const u8, blob_len_out: [*c]usize) c_int;
pub extern fn tdnf_rpmdb_write_install_file_config(config: ?*const tdnf_rpm_config, fh: ?*tdnf_rpm_file, install_tid: u32, install_time: u32, install_color: u32, file_states: [*c]const u8, file_state_count: usize, hnum_out: [*c]u32) c_int;
pub extern fn tdnf_rpmdb_write_replace_file_config(config: ?*const tdnf_rpm_config, old_hnum: u32, fh: ?*tdnf_rpm_file, install_tid: u32, install_time: u32, install_color: u32, file_states: [*c]const u8, file_state_count: usize, new_hnum_out: [*c]u32) c_int;
pub extern fn tdnf_rpmdb_write_erase_hnum_config(config: ?*const tdnf_rpm_config, hnum: u32) c_int;
pub const struct_tdnf_rpmdb_label_match = extern struct {
    hnum: u32 = 0,
    name: [*c]u8 = null,
    evr: [*c]u8 = null,
    arch: [*c]u8 = null,
};
pub const tdnf_rpmdb_label_match = struct_tdnf_rpmdb_label_match;
pub extern fn tdnf_rpmdb_find_label_matches_config(config: ?*const tdnf_rpm_config, name: [*c]const u8, evr: [*c]const u8, matches_out: [*c][*c]tdnf_rpmdb_label_match, count_out: [*c]usize) c_int;
pub extern fn tdnf_rpmdb_label_matches_free(matches: [*c]tdnf_rpmdb_label_match, count: usize) void;
pub extern fn tdnf_rpm_file_open(path: [*c]const u8) ?*tdnf_rpm_file;
pub extern fn tdnf_rpm_file_close(fh: ?*tdnf_rpm_file) void;
pub const struct_tdnf_rpm_file_metadata = extern struct {
    name: [*c]const u8 = null,
    version: [*c]const u8 = null,
    release: [*c]const u8 = null,
    arch: [*c]const u8 = null,
    epoch: u32 = 0,
    has_epoch: c_int = 0,
    package_kind: c_int = 0,
    main_header_blob: [*c]const u8 = null,
    main_header_blob_len: usize = 0,
};
pub const tdnf_rpm_file_metadata = struct_tdnf_rpm_file_metadata;
pub const struct_tdnf_rpm_header_view = extern struct {
    blob: [*c]const u8 = null,
    len: usize = 0,
};
pub const tdnf_rpm_header_view = struct_tdnf_rpm_header_view;
pub extern fn tdnf_rpm_header_name_equals(header_blob: [*c]const u8, header_len: usize, name: [*c]const u8) c_int;
pub extern fn tdnf_rpm_canonical_path_config(config: ?*const tdnf_rpm_config, path: [*c]const u8, output: [*c]u8, output_len: usize) c_int;
pub extern fn tdnf_rpm_header_owns_path_config(header_blob: [*c]const u8, header_len: usize, path: [*c]const u8, config: ?*const tdnf_rpm_config) c_int;
pub extern fn tdnf_rpm_file_get_metadata(fh: ?*tdnf_rpm_file, metadata_out: [*c]tdnf_rpm_file_metadata) c_int;
pub extern fn tdnf_rpm_file_main_header_blob(fh: ?*tdnf_rpm_file, out: [*c][*c]const u8, out_len: [*c]usize) c_int;
pub extern fn tdnf_rpm_file_bytes(fh: ?*tdnf_rpm_file, out: [*c][*c]const u8, out_len: [*c]usize) c_int;
pub extern fn tdnf_rpm_file_digest(fh: ?*tdnf_rpm_file, kind: c_int, out_digest: [*c]u8, out_len: usize) c_int;
pub extern fn tdnf_rpm_file_extract_source_config(fh: ?*tdnf_rpm_file, config: ?*const tdnf_rpm_config, trans_flags: u32) c_int;
pub const TDNF_RPM_INSTALL_KIND_INSTALL: c_int = 0;
pub const TDNF_RPM_INSTALL_KIND_UPGRADE: c_int = 1;
pub const TDNF_RPM_INSTALL_KIND_REINSTALL: c_int = 2;
pub const enum_tdnf_rpm_install_kind = c_uint;
pub const tdnf_rpm_install_kind = enum_tdnf_rpm_install_kind;
pub const struct_tdnf_rpm_install_prior_header = extern struct {
    blob: [*c]const u8 = null,
    len: usize = 0,
};
pub const tdnf_rpm_install_prior_header = struct_tdnf_rpm_install_prior_header;
pub const tdnf_rpm_install_conflict_fn = ?*const fn (data: ?*anyopaque, path: [*c]const u8) callconv(.c) c_int;
pub const tdnf_rpm_changed_path_fn = ?*const fn (data: ?*anyopaque, path: [*c]const u8) callconv(.c) c_int;
pub const struct_tdnf_rpm_install_options = extern struct {
    install_root: [*c]const u8 = null,
    config: ?*const tdnf_rpm_config = null,
    trans_flags: u32 = 0,
    install_kind: tdnf_rpm_install_kind = @import("std").mem.zeroes(tdnf_rpm_install_kind),
    prior_headers: [*c]const tdnf_rpm_install_prior_header = null,
    prior_header_count: usize = 0,
    conflict_fn: tdnf_rpm_install_conflict_fn = null,
    conflict_fn_data: ?*anyopaque = null,
    changed_path_fn: tdnf_rpm_changed_path_fn = null,
    changed_path_fn_data: ?*anyopaque = null,
};
pub const tdnf_rpm_install_options = struct_tdnf_rpm_install_options;
pub extern fn tdnf_rpm_file_install(fh: ?*tdnf_rpm_file, options: [*c]const tdnf_rpm_install_options) c_int;
pub const TDNF_RPM_SCRIPTLET_PHASE_PRE: c_int = 0;
pub const TDNF_RPM_SCRIPTLET_PHASE_POST: c_int = 1;
pub const TDNF_RPM_SCRIPTLET_PHASE_PREUN: c_int = 2;
pub const TDNF_RPM_SCRIPTLET_PHASE_POSTUN: c_int = 3;
pub const TDNF_RPM_SCRIPTLET_PHASE_PRETRANS: c_int = 4;
pub const TDNF_RPM_SCRIPTLET_PHASE_POSTTRANS: c_int = 5;
pub const enum_tdnf_rpm_scriptlet_phase = c_uint;
pub const tdnf_rpm_scriptlet_phase = enum_tdnf_rpm_scriptlet_phase;
pub const TDNF_RPM_SCRIPTLET_OUTCOME_NOT_RUN: c_int = 0;
pub const TDNF_RPM_SCRIPTLET_OUTCOME_OK: c_int = 1;
pub const TDNF_RPM_SCRIPTLET_OUTCOME_SIGNALED: c_int = 3;
pub const enum_tdnf_rpm_scriptlet_outcome = c_uint;
pub const tdnf_rpm_scriptlet_outcome = enum_tdnf_rpm_scriptlet_outcome;
pub const struct_tdnf_rpm_scriptlet_options = extern struct {
    install_root: [*c]const u8 = null,
    config: ?*const tdnf_rpm_config = null,
    install_root_fd: c_int = 0,
    trans_flags: u32 = 0,
    rpmdefines: [*c]const [*c]const u8 = null,
    rpmdefine_count: usize = 0,
    arg1: c_int = 0,
    arg2: c_int = 0,
    script_fd: c_int = 0,
    redirect_stdout_to_stderr: c_int = 0,
};
pub const tdnf_rpm_scriptlet_options = struct_tdnf_rpm_scriptlet_options;
pub const struct_tdnf_rpm_scriptlet_result = extern struct {
    ran: c_int = 0,
    critical: c_int = 0,
    outcome: tdnf_rpm_scriptlet_outcome = @import("std").mem.zeroes(tdnf_rpm_scriptlet_outcome),
    exit_status: c_int = 0,
    signal_number: c_int = 0,
};
pub const tdnf_rpm_scriptlet_result = struct_tdnf_rpm_scriptlet_result;
pub extern fn tdnf_rpm_header_run_scriptlet(header_blob: [*c]const u8, header_len: usize, phase: tdnf_rpm_scriptlet_phase, options: [*c]const tdnf_rpm_scriptlet_options, result_out: [*c]tdnf_rpm_scriptlet_result) c_int;
pub const TDNF_RPM_TRIGGER_PHASE_TRIGGERIN: c_int = 0;
pub const TDNF_RPM_TRIGGER_PHASE_TRIGGERUN: c_int = 1;
pub const TDNF_RPM_TRIGGER_PHASE_TRIGGERPOSTUN: c_int = 2;
pub const enum_tdnf_rpm_trigger_phase = c_uint;
pub const tdnf_rpm_trigger_phase = enum_tdnf_rpm_trigger_phase;
pub const struct_tdnf_rpm_trigger_options = extern struct {
    db_root: [*c]const u8 = null,
    install_root: [*c]const u8 = null,
    config: ?*const tdnf_rpm_config = null,
    install_root_fd: c_int = 0,
    trans_flags: u32 = 0,
    rpmdefines: [*c]const [*c]const u8 = null,
    rpmdefine_count: usize = 0,
    script_fd: c_int = 0,
    redirect_stdout_to_stderr: c_int = 0,
    arg2_override_present: c_int = 0,
    arg2_override_value: c_int = 0,
    transaction_headers: [*c]const tdnf_rpm_header_view = null,
    transaction_header_count: usize = 0,
    transaction_view_present: c_int = 0,
    trigger_owner_headers: [*c]const tdnf_rpm_header_view = null,
    trigger_owner_header_count: usize = 0,
    trigger_owner_view_present: c_int = 0,
};
pub const tdnf_rpm_trigger_options = struct_tdnf_rpm_trigger_options;
pub const struct_tdnf_rpm_trigger_result = extern struct {
    ran: c_int = 0,
    critical: c_int = 0,
    outcome: tdnf_rpm_scriptlet_outcome = @import("std").mem.zeroes(tdnf_rpm_scriptlet_outcome),
    exit_status: c_int = 0,
    signal_number: c_int = 0,
};
pub const tdnf_rpm_trigger_result = struct_tdnf_rpm_trigger_result;
pub extern fn tdnf_rpm_header_run_triggers(header_blob: [*c]const u8, header_len: usize, phase: tdnf_rpm_trigger_phase, options: [*c]const tdnf_rpm_trigger_options, result_out: [*c]tdnf_rpm_trigger_result) c_int;
pub const TDNF_RPM_FILE_TRIGGER_KIND_PACKAGE: c_int = 0;
pub const TDNF_RPM_FILE_TRIGGER_KIND_TRANSACTION: c_int = 1;
pub const enum_tdnf_rpm_file_trigger_kind = c_uint;
pub const tdnf_rpm_file_trigger_kind = enum_tdnf_rpm_file_trigger_kind;
pub const TDNF_RPM_TRIGGER_PRIORITY_ALL: c_int = 0;
pub const TDNF_RPM_TRIGGER_PRIORITY_HIGH: c_int = 1;
pub const TDNF_RPM_TRIGGER_PRIORITY_LOW: c_int = 2;
pub const enum_tdnf_rpm_trigger_priority_class = c_uint;
pub const tdnf_rpm_trigger_priority_class = enum_tdnf_rpm_trigger_priority_class;
pub const struct_tdnf_rpm_trigger_path = extern struct {
    path: [*c]const u8 = null,
    source_header_blob: [*c]const u8 = null,
    source_header_len: usize = 0,
};
pub const tdnf_rpm_trigger_path = struct_tdnf_rpm_trigger_path;
pub const struct_tdnf_rpm_file_trigger_owner = extern struct {
    header_blob: [*c]const u8 = null,
    header_len: usize = 0,
    paths: [*c]const tdnf_rpm_trigger_path = null,
    path_count: usize = 0,
    order: u64 = 0,
};
pub const tdnf_rpm_file_trigger_owner = struct_tdnf_rpm_file_trigger_owner;
pub const struct_tdnf_rpm_file_trigger_options = extern struct {
    install_root: [*c]const u8 = null,
    config: ?*const tdnf_rpm_config = null,
    install_root_fd: c_int = 0,
    trans_flags: u32 = 0,
    rpmdefines: [*c]const [*c]const u8 = null,
    rpmdefine_count: usize = 0,
    script_fd: c_int = 0,
    redirect_stdout_to_stderr: c_int = 0,
    suppress_stdin: c_int = 0,
};
pub const tdnf_rpm_file_trigger_options = struct_tdnf_rpm_file_trigger_options;
pub extern fn tdnf_rpm_header_validate_trigger_scripts_config(header_blob: [*c]const u8, header_len: usize, config: ?*const tdnf_rpm_config) c_int;
pub extern fn tdnf_rpm_header_has_file_trigger_metadata(header_blob: [*c]const u8, header_len: usize, kind: tdnf_rpm_file_trigger_kind) c_int;
pub extern fn tdnf_rpm_header_foreach_trigger_file(header_blob: [*c]const u8, header_len: usize, trans_flags: u32, callback: tdnf_rpm_changed_path_fn, callback_data: ?*anyopaque) c_int;
